--- a/android-prediction-yelp-demo/app/src/main/AndroidManifest.xml
+++ b/android-prediction-yelp-demo/app/src/main/AndroidManifest.xml
@@ -5,33 +5,59 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="14"
+        android:minSdkVersion="16"
         android:targetSdkVersion="19" />
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
-        android:name=".AppDataCollect"
+        android:name="io.prediction.example.yelp.AppDataCollect"
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyCG0lHBhKofXfmm17sYjy3e_Y4Z-BxRnnA" />
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
+
         <activity
             android:name="io.prediction.example.yelp.IntroActivity"
             android:label="@string/app_name" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
-            android:name=".UsersListActivity"
-            android:label="@string/title_activity_user" >
+            android:name="io.prediction.example.yelp.RestaurantListActivity"
+            android:label="Recommendations" >
         </activity>
         <activity
-            android:name=".RestaurantListActivity"
-            android:label="@string/title_activity_user" >
+            android:name="io.prediction.example.yelp.DetailActivity"
+            android:label="@string/title_activity_detail" >
+        </activity>
+        <activity
+            android:name="io.prediction.example.yelp.PrefActivity"
+            android:label="Restaurants near you" >
         </activity>
     </application>
+
 </manifest>
